<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_task_2">

    <LinearLayout
        android:id="@+id/listButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="246dp"
            android:layout_height="67dp"
            android:layout_gravity="center"
            android:background="@drawable/background_button_menu_item"
            android:fontFamily="@font/montserrat_bold"
            android:paddingTop="15dp"
            android:text="@string/multi_stage"
            android:textAlignment="center"
            android:textColor="@color/golden"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="246dp"
            android:layout_height="67dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_button_menu_item"
            android:fontFamily="@font/montserrat_bold"
            android:paddingTop="15dp"
            android:text="@string/matching"
            android:textAlignment="center"
            android:textColor="@color/golden"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="246dp"
            android:layout_height="67dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_button_menu_item"
            android:fontFamily="@font/montserrat_bold"
            android:paddingTop="15dp"
            android:text="@string/dragging_variant"
            android:textAlignment="center"
            android:textColor="@color/golden"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="246dp"
            android:layout_height="67dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_button_menu_item"
            android:fontFamily="@font/montserrat_bold"
            android:paddingTop="15dp"
            android:text="@string/completion"
            android:textAlignment="center"
            android:textColor="@color/golden"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="246dp"
            android:layout_height="67dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_button_menu_item"
            android:fontFamily="@font/montserrat_bold"
            android:paddingTop="15dp"
            android:text="@string/estimation"
            android:textAlignment="center"
            android:textColor="@color/golden"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="246dp"
            android:layout_height="67dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_button_menu_item"
            android:fontFamily="@font/montserrat_bold"
            android:paddingTop="15dp"
            android:text="@string/prev_task"
            android:textAlignment="center"
            android:textColor="@color/golden"
            android:textSize="17sp" />


    </LinearLayout>
</FrameLayout>
